More cleanup for network targeting and obsolete record stream access
Signed-off-by: Michael Tinker <michael.tinker@swirldslabs.com>